<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/landingPage"
            android:icon="@drawable/ic_home"
            android:iconTint="@drawable/menu_selector"
            android:title="@string/home_menu" />
        <item
            android:id="@+id/teams"
            android:icon="@drawable/ic_team"
            android:iconTint="@drawable/menu_selector"
            android:title="@string/teams_menu" />
        <item
            android:id="@+id/schedule"
            android:icon="@drawable/ic_calendar"
            android:iconTint="@drawable/menu_selector"
            android:title="@string/schedule_menu" />
        <item
            android:id="@+id/stadiums"
            android:icon="@drawable/ic_place"
            android:iconTint="@drawable/menu_selector"
            android:title="@string/stadiums_menu" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:iconTint="@drawable/menu_selector"
            android:title="@string/settings_menu" />
    </group>


</menu>