...
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:id="@+id/stadium_ticket_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cornerRadius="40dp"
            android:fontFamily="@font/asap_bold"
            android:textAllCaps="false"
            android:backgroundTint="@color/caramel"
...
