...
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_weight="1"
                    android:layout_marginTop="16dp"
                    android:id="@+id/favourite_team_recycler_view"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_height="0dp"
                    tools:listitem="@layout/teams_image_icon_item">
                </androidx.recyclerview.widget.RecyclerView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/favourite_team_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    app:cornerRadius="25dp"
                    android:textAllCaps="false"
                    android:text="@string/favourite_team_confirm_cta">
...
